Nexos/ros2_ws/log/build_2024-10-07_10-54-39/nexos_ros2/stderr.log
  File "/home/eia/ros2_ws/install/nexos_ros2/lib/python3.10/site-packages/resource/app_scara/main.py", line 26
    self.ruta_nexos_icono = os.path.join(directorio_actual, "nexos_icon.png")l
                                                                             ^
SyntaxError: invalid syntax

